# agent-genome-mapping

./: .gitignore  AGM_Concept_v0.1_DmAndreyanov.txt  AGM_Launch_Report_v0.1_DmAndreyanov.txt  FEEDBACK.md  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
agm/: __init__.py  compatibility_matrix.py  drift_monitor.py  evolutionary_sandbox.py  genome_schema.py  phenotype_engine.py
articles/: compatibility_checker_article.md  drift_detective_article.md  evolution_advisor_article.md  genome_generator_article.md  phenotype_analyzer_article.md
examples/: quickstart.py
prompts/: 01_genome_generator.py  02_phenotype_analyzer.py  03_compatibility_checker.py  04_evolution_advisor.py  05_drift_detective.py
tests/: __init__.py  test_agm.py
