[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-genome-mapping"
version = "0.1.0"
description = "Agent Genome Mapping™ — Evolutionary Architecture for Autonomous AI Systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dm.Andreyanov", email = "imperiapmk@gmail.com"}
]
keywords = ["ai", "agents", "genome", "mapping", "autonomous", "systems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/GIBDD-DPS/agent-genome-mapping"
Documentation = "https://github.com/GIBDD-DPS/agent-genome-mapping"
Repository = "https://github.com/GIBDD-DPS/agent-genome-mapping"
Issues = "https://github.com/GIBDD-DPS/agent-genome-mapping/issues"
LinkedIn = "https://www.linkedin.com/in/dmitry-andreyanov-b587b44b/"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=agm"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
